--- a/about-us.html
+++ b/about-us.html
@@ -57,7 +57,7 @@
         <h2 class="text-center">ABOUT THE TEA RESERVE</h2>
         <div class="row">
           <div class="col-lg-12">
-<img src="images/__opt__aboutcom__coeus__resources__content_migration__serious_eats__seriouseats.com__images__2015__01__20150118-tea-max-falkowitz-5-1500x1125-635a97ffa8084821bd89a8d01356f4d5.jpg" alt="" width="1200" height="1200" class="img-fluid mb-3 rounded"/>
+<img src="images/pile-tea-leaves.jpg" alt="" width="1500" height="1500" class="img-fluid mb-3 rounded"/>
 <div id=text>
   <p>"The Tea Reserve" came into existance when two entrepreneurial brothers with a love for tea decided to try and make a successful business educating people about the benefits of tea and providing every variety of tea possible by searching far and wide for vendors who had sustainably sourced good product. </p>
 	<p>With this goal still in mind, the business continues to grow while supporting great workers across the globe.</p>
