--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             </div>
           </div>
           <div class="col-md-4 pb-1 pb-md-0">
-            <div class="card"> <img src="images/__opt__aboutcom__coeus__resources__content_migration__serious_eats__seriouseats.com__images__2015__01__20150118-tea-max-falkowitz-5-1500x1125-635a97ffa8084821bd89a8d01356f4d5.jpg" alt="Card image cap" height="200" class="card-img-top">
+            <div class="card"> <img src="images/pile-tea-leaves.jpg" alt="Card image cap" height="200" class="card-img-top">
               <div class="card-body">
                 
                 <a href="about-us.html" class="btn btn-primary">About Us</a></div>
