--- a/health.html
+++ b/health.html
@@ -57,24 +57,9 @@
             <li data-target="#carouselExampleControls" data-slide-to="2"></li>
           </ol>
           <div class="carousel-inner">
-            <div class="carousel-item active"> <img class="d-block w-100" src="images/Health-Benefits-Of-Black-Tea.jpg" alt="First slide" height="600">
-<div class="carousel-caption d-none d-md-block">
-              <h5>London Tea</h5>
-                <p>High tea and high adventure in London towne</p>
-              </div>
-            </div>
-            <div class="carousel-item"> <img src="images/Health-Benefits-of-Herbal-Tea.jpg" alt="Second slide" height="600" class="d-block w-100">
-              <div class="carousel-caption d-none d-md-block">
-                <h5>Back Canal Venice</h5>
-                <p>Come see a different side of Venice</p>
-              </div>
-            </div>
-            <div class="carousel-item"> <img src="images/foods-infographics-green-tea-health-benefits-102845085.jpg" alt="Third slide" height="600" class="d-block w-100">
-              <div class="carousel-caption d-none d-md-block">
-                <h5>New York Times</h5>
-                <p>You've never seen this side of the Big Apple</p>
-              </div>
-            </div>
+            <div class="carousel-item active"> <img class="d-block w-100" src="images/Health-Benefits-Of-Black-Tea.jpg" alt="First slide" height="600"></div>
+            <div class="carousel-item"> <img src="images/Health-Benefits-of-Herbal-Tea.jpg" alt="Second slide" height="600" class="d-block w-100">                          </div>
+            <div class="carousel-item"> <img src="images/foods-infographics-green-tea-health-benefits-102845085.jpg" alt="Third slide" height="600" class="d-block w-100">                            </div>
           </div>
           <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev"> <span class="carousel-control-prev-icon" aria-hidden="true"></span> <span class="sr-only">Previous</span></a> <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next"> <span class="carousel-control-next-icon" aria-hidden="true"></span> <span class="sr-only">Next</span></a></div>
       </div>
