--- a/teas.html
+++ b/teas.html
@@ -97,7 +97,7 @@
               <div class="card-body">
                 <h5 class="card-title">Green Tea</h5>
                 <p class="card-text">These teas offer some of the most antioxidants and health benefits, but contain less caffeine.</p>
-                <a href="#" class="btn btn-primary">Get More Info</a></div>
+</div>
             </div>
           </div>
           <div class="col-md-4 pb-1 pb-md-0">
@@ -105,7 +105,7 @@
               <div class="card-body">
                 <h5 class="card-title">&nbsp;Black Tea</h5>
                 <p class="card-text">Tasty black teas. These teas offer great health benefits and get you that kick of caffeine.</p>
-                <a href="#" class="btn btn-primary">Get More Info</a></div>
+Get More Info</div>
             </div>
           </div>
           <div class="col-md-4 pb-1 pb-md-0">
@@ -113,7 +113,7 @@
               <div class="card-body">
                 <h5 class="card-title">Herbal Tea</h5>
                 <p class="card-text">Tasty teas to finish off your day. Perfect if you're looking for the benefits of tea without the caffeine</p>
-                <a href="#" class="btn btn-primary">Get More Info</a></div>
+</div>
             </div>
           </div>
         </div>
