--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <div class="card"> <img src="images/foods-infographics-green-tea-health-benefits-102845085.jpg" alt="Card image cap" height="200" class="card-img-top">
               <div class="card-body">
                 
-                <a href="#" class="btn btn-primary">Health</a></div>
+                <a href="health.html" class="btn btn-primary">Health</a></div>
             </div>
           </div>
           <div class="col-md-4 pb-1 pb-md-0">
